@@ -4,9 +4,10 @@
 package de.uka.ilkd.key.speclang.njml;
 
 import java.io.File;
+import java.nio.file.Files;
+import java.nio.file.Path;
 
-import de.uka.ilkd.key.api.KeYApi;
-import de.uka.ilkd.key.api.ProofManagementApi;
+import de.uka.ilkd.key.control.KeYEnvironment;
 import de.uka.ilkd.key.java.Services;
 import de.uka.ilkd.key.proof.init.ProofInputException;
 import de.uka.ilkd.key.proof.io.ProblemLoaderException;
@@ -20,13 +21,14 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 public class ContractLoadingTests {
+    // TODO weigl: should use FindResources
     public static final File EXAMPLES_DIR = new File("../key.ui/examples/");
 
     @Test
     public void sumAndMax() throws ProblemLoaderException {
         final File javaFile =
             new File(EXAMPLES_DIR, "heap/vstte10_01_SumAndMax/src/SumAndMax.java");
-        ProofManagementApi file = KeYApi.loadProof(javaFile);
+        KeYEnvironment<?> file = KeYEnvironment.load(javaFile.toPath());
         Services services = file.getServices();
         Logger LOGGER = LoggerFactory.getLogger(ContractLoadingTests.class);
         for (Contract proofContract : file.getProofContracts()) {
@@ -36,39 +38,40 @@ public class ContractLoadingTests {
 
     @Test
     public void issues1658() throws ProblemLoaderException {
-        final File javaFile =
-            new File(HelperClassForTests.TESTCASE_DIRECTORY, "issues/1658/Test.java");
-        Assumptions.assumeTrue(javaFile.exists());
-        ProofManagementApi file = KeYApi.loadProof(javaFile);
+        final Path javaFile =
+            HelperClassForTests.TESTCASE_DIRECTORY.resolve("issues/1658/Test.java");
+        Assumptions.assumeTrue(Files.exists(javaFile));
+        KeYEnvironment<?> file = KeYEnvironment.load(javaFile);
         Assertions.assertTrue(file.getProofContracts().size() > 0);
     }
 
     @Test
     void issues1717() throws ProblemLoaderException, ProofInputException {
-        File javaFile =
-            new File(HelperClassForTests.TESTCASE_DIRECTORY, "issues/1717/UnderscoreZero.java");
-        Assumptions.assumeTrue(javaFile.exists());
-        ProofManagementApi file = KeYApi.loadProof(javaFile);
-        Assertions.assertTrue(file.getProofContracts().size() > 0);
-        var proof = file.startProof(file.getProofContracts().get(0));
+        Path javaFile =
+            HelperClassForTests.TESTCASE_DIRECTORY.resolve("issues/1717/UnderscoreZero.java");
+        Assumptions.assumeTrue(Files.exists(javaFile));
+        KeYEnvironment<?> file = KeYEnvironment.load(javaFile);
+        Assertions.assertFalse(file.getProofContracts().isEmpty());
+        final var contract = file.getProofContracts().getFirst();
+        var proof = file.createProof(contract.createProofObl(file.getInitConfig()));
         Assertions.assertNotNull(proof);
     }
 
     @Test
     public void specMathJavaMathTest() throws ProblemLoaderException {
-        final File javaFile =
-            new File(HelperClassForTests.TESTCASE_DIRECTORY, "specMath/java/Test.java");
-        Assumptions.assumeTrue(javaFile.exists());
-        ProofManagementApi file = KeYApi.loadProof(javaFile);
-        Assertions.assertTrue(file.getProofContracts().size() > 0);
+        final Path javaFile =
+            HelperClassForTests.TESTCASE_DIRECTORY.resolve("specMath/java/Test.java");
+        Assumptions.assumeTrue(Files.exists(javaFile));
+        KeYEnvironment<?> file = KeYEnvironment.load(javaFile);
+        Assertions.assertFalse(file.getProofContracts().isEmpty());
     }
 
     @Test
     public void specMathBigintMathTest() throws ProblemLoaderException {
-        final File javaFile =
-            new File(HelperClassForTests.TESTCASE_DIRECTORY, "specMath/bigint/Test.java");
-        Assumptions.assumeTrue(javaFile.exists());
-        ProofManagementApi file = KeYApi.loadProof(javaFile);
-        Assertions.assertTrue(file.getProofContracts().size() > 0);
+        final Path javaFile =
+            HelperClassForTests.TESTCASE_DIRECTORY.resolve("specMath/bigint/Test.java");
+        Assumptions.assumeTrue(Files.exists(javaFile));
+        KeYEnvironment<?> file = KeYEnvironment.load(javaFile);
+        Assertions.assertFalse(file.getProofContracts().isEmpty());
     }
 }
